Change map view - also fixes the wrapping on mobile

--- a/_sass/world-map.scss
+++ b/_sass/world-map.scss
@@ -1,3 +1,3 @@
 .world-map {
-  text-align: center;
+  margin-bottom: 10px;
 }
